2009-08-19  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/rank.rb: increment hit count only in view mode.

2009-08-17  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/docdiff/charstring.rb: code cleanup.

2009-08-16  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/docdiff/charstring.rb: many changes for Ruby-1.9.
	* hiki/docdiff/encoding/document.rb: do not guess encoding for
	Ruby-1.9.

	* hiki/docdiff/encoding/ja_utf8.rb: quote regular expressions
	correctly.

	* style/default/hikidoc.rb: use recent hikidoc.rb (rev.116).

2009-08-15  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (cmd_diff): use unified_diff if word_diff raises
	an exception, because word_diff can raise
	Encoding::CompatibilityError in Ruby-1.9. this change should be
	temporary and should be removed when docdiff becomes Ruby-1.9
	ready.

	* hiki/util.rb (unified_diff): escape output in this method just
	same as word_diff() does.
	* misc/plugin/rss.rb (rss_body): remove escape because
	unified_diff() will escape instead.

	* hiki.cgi: set Encoding::defailt_external if exists (for Ruby
	1.9). add :accept_charset parameter in CGI.new().

	* style/default/html_formatter.rb: remove a needless regexp
	option.

	* hiki/docdiff/view.rb (apply_style, apply_style_digest): use
	Array#join instead of Array#to_s, whose specification is different
	between Ruby 1.8 and Ruby 1.9.
	* hiki/util.rb (word_diff): ditto.

	* hiki/util.rb (unified_diff): use String#split(/^/) instead of
	String#to_a, that works on both (old) Ruby-1.8 and Ruby-1.9.

	* style/default/parser.rb (parse): use HikiDoc.to_html instead of
	HikiDoc#to_html.

2009-08-14  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/00default.rb (hiki_footer): display fcgi information in
	footer.

	* hiki/page.rb (process): use String#bytesize instead of
	String#size if exists.

	* hiki/config.rb (load_cgi_conf): call eval() with binding, that
	is required for Ruby 1.9.

	* hiki/db/ptstore.rb: define commit_new if missing, that is
	required for Ruby 1.9.
